--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -2,7 +2,7 @@
   "PageTemplate": {
     "Header": {
       "home": "ಮುಖಪುಟ",
-      "help": "ಸಹಾಯ"
+      "faq": "ಎಫ್‌ಎಕ್ಯೂ (FAQ)"
     },
     "Footer": {
       "product": "ಒಂದು MOSIP ಉತ್ಪನ್ನ",
@@ -59,6 +59,38 @@
       "heading": "ನಿಮ್ಮ ಕ್ರೆಡೆನ್ಶಿಯಲ್ಗಳನ್ನು ತಕ್ಷಣ ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ತ್ವರಿತ ಸಲಹೆಗಳು",
       "toastText":"ಶೀಘ್ರದಲ್ಲೇ ಬರಲಿದೆ",
       "buttontext": "ಇಲ್ಲಿ ಕ್ಲಿಕ್ ಮಾಡಿ"
+    },
+    "Login": {
+    "login-title": "ಲಾಗಿನ್ ಮಾಡಿ",
+    "login-description":"ನಿಮ್ಮ ಖಾತೆಯನ್ನು ಬಳಸಿಕೊಂಡು ಲಾಗಿನ್ ಮಾಡಿ ಅಥವಾ ನಿಮ್ಮ ಗುರುತುಗಳಿಗೆ ಪ್ರವೇಶಿಸಲು ಅತಿಥಿಯಾಗಿ ಮುಂದುವರೆಯಿರಿ.",
+    "login-note":"ಅತಿಥಿ ಮೋಡ್‌ನಲ್ಲಿ ಕೆಲವು ವೈಶಿಷ್ಟ್ಯಗಳು ಸೀಮಿತವಾಗಿರಬಹುದು.",
+    "logging-in": "ಲಾಗಿನ್ ಆಗುತ್ತಿದೆ",
+    "login-google": "Google ಮೂಲಕ ಮುಂದುವರಿಯಿರಿ",
+    "login-guest": "ಅತಿಥಿಯಾಗಿ ಮುಂದುವರಿಯಿರಿ"
+    },
+    "LoginFailedModal": {
+      "failure-message": "ಲಾಗಿನ್ ವಿಫಲವಾಗಿದೆ",
+      "failure-description": "ನಿಮ್ಮ ಲಾಗಿನ್ ಪ್ರಯತ್ನ ವಿಫಲವಾಗಿದೆ. ದಯವಿಟ್ಟು ನಿಮ್ಮ ಪ್ರಮಾಣಪತ್ರಗಳನ್ನು ಪರಿಶೀಲಿಸಿ ಮತ್ತು ಪುನಃ ಪ್ರಯತ್ನಿಸಿ",
+      "retry": "ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ"
+    }
+  },
+  "PinPage": {
+    "submit": "ಸಮರ್ಪಿಸಿ",
+    "submitting": "ಸಮರ್ಪಿಸಲಾಗುತ್ತಿದೆ",
+    "set-passcode": "ಪಾಸ್‌ಕೋಡ್ ಹೊಂದಿಸಿ",
+    "enter-passcode": "ಪಾಸ್‌ಕೋಡ್ ನಮೂದಿಸಿ",
+    "confirm-passcode": "ಪಾಸ್‌ಕೋಡ್ ದೃಢೀಕರಿಸಿ",
+    "reset-passcode": "ಪಾಸ್‌ಕೋಡ್ ಮರುಹೊಂದಿಸಿ",
+    "set-passcode-description": "ಪ್ರಾರಂಭಿಸಲು ನಿಮ್ಮ ಪಾಸ್‌ಕೋಡ್ ಹೊಂದಿಸಿ",
+    "enter-passcode-description": "ನಿಮ್ಮ 6 ಅಂಕಗಳ ಪಾಸ್‌ಕೋಡ್ ನಮೂದಿಸಿ",
+    "passcode-warning": "ಭವಿಷ್ಯದಲ್ಲಿ ಲಾಗಿನ್ ಮಾಡಲು ಪಾಸ್‌ಕೋಡ್ ನೆನಪಿಡಿ",
+    "error": {
+      "wallet-not-found-error": "ಪರ್ಸು ಕಂಡುಬಂದಿಲ್ಲ. ದಯವಿಟ್ಟು ಹೊಸದನ್ನು ರಚಿಸಿ.",
+      "pin-length-error": "ಪಿನ್ 6 ಸಂಖ್ಯೆಗಳಾಗಿರಬೇಕು.",
+      "passcode-mismatch-error": "ಪಾಸ್ಕೋಡ್ ಹೊಂದಾಣಿಕೆಯಾಗಿಲ್ಲ.",
+      "create-wallet-error": "ಪರ್ಸು ರಚನೆ ವಿಫಲವಾಗಿದೆ.",
+      "incorrect-pin-error": "ತಪ್ಪಾದ ಪಿನ್ ನಮೂದಿಸಲಾಗಿದೆ.",
+      "fetch-wallets-error": "ಪರ್ಸುಗಳನ್ನು ಪಡೆಯಲು ವಿಫಲವಾಗಿದೆ."
     }
   },
   "IssuersPage": {
