--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -2,7 +2,7 @@
   "PageTemplate": {
     "Header": {
       "home": "முகப்பு",
-      "help": "உதவி"
+      "faq": "அடிக்கடி கேட்கப்படும் கேள்விகள்"
     },
     "Footer": {
       "product": "ஒரு MOSIP தயாரிப்பு",
@@ -59,6 +59,38 @@
       "heading": "உங்கள் சான்றுகளை உடனடியாக பதிவிறக்குவதற்கான விரைவான குறிப்புகள்",
       "toastText":"விரைவில்",
       "buttontext": "இங்கே கிளிக் செய்யவும்"
+    },
+    "Login": {
+    "login-title": "உள்நுழையவும்",
+    "login-description":"உங்கள் கணக்கில் உள்நுழையவோ அல்லது உங்கள் சான்றுகளுக்கு அணுக விருந்தினராக தொடரவோ செய்யுங்கள்.",
+    "login-note":"விருந்தினர் பயன்முறையில் சில அம்சங்கள் கட்டுப்படுத்தப்பட்டிருக்கலாம்.",
+    "logging-in": "உள்நுழைகிறது",
+    "login-google": "Google மூலம் தொடரவும்",
+    "login-guest": "விருந்தினராக தொடரவும்"
+  },
+  "LoginFailedModal": {
+    "failure-message": "உள்நுழைவு தோல்வி",
+    "failure-description": "உங்கள் உள்நுழைவு முயற்சி தோல்வியடைந்தது. உங்கள் சான்றுகளை சரிபார்க்கவும், மீண்டும் முயற்சிக்கவும்",
+    "retry": "மீண்டும் முயற்சிக்கவும்"
+  }
+  },
+  "PinPage": {
+    "submit": "சமர்ப்பிக்கவும்",
+    "submitting": "சமர்ப்பிக்கப்படுகின்றது",
+    "set-passcode": "பாஸ்கோடு அமைக்கவும்",
+    "enter-passcode": "பாஸ்கோடு உள்ளிடவும்",
+    "confirm-passcode": "பாஸ்கோடு உறுதிப்படுத்தவும்",
+    "reset-passcode": "பாஸ்கோடு மீட்டமைக்கவும்",
+    "set-passcode-description": "தொடங்க உங்கள் பாஸ்கோடு அமைக்கவும்",
+    "enter-passcode-description": "உங்கள் 6 இலக்க பாஸ்கோடு உள்ளிடவும்",
+    "passcode-warning": "எதிர்கால உள்நுழைவுக்கு பாஸ்கோடு நினைவில் வைக்கவும்",
+    "error": {
+      "wallet-not-found-error": "பணப்பை காணவில்லை. தயவுசெய்து ஒன்றை உருவாக்கவும்.",
+      "pin-length-error": "பின் 6 இலக்கமாக இருக்க வேண்டும்.",
+      "passcode-mismatch-error": "பாஸ்கோடு பொருந்தவில்லை.",
+      "create-wallet-error": "பணப்பை உருவாக்கம் தோல்வியடைந்தது.",
+      "incorrect-pin-error": "தவறான பின் உள்ளிடப்பட்டது.",
+      "fetch-wallets-error": "பணப்பைகளை மீட்கத் தவறியது."
     }
   },
   "IssuersPage": {
