--- a/inji-web/src/locales/fr.json
+++ b/inji-web/src/locales/fr.json
@@ -2,7 +2,7 @@
   "PageTemplate": {
     "Header": {
       "home": "Accueil",
-      "help": "Aide"
+      "faq": "FAQ"
     },
     "Footer": {
       "product": "Un produit MOSIP",
@@ -59,6 +59,38 @@
       "heading": "Conseils rapides pour télécharger instantanément vos identifiants",
       "toastText":"à venir",
       "buttontext": "Cliquez ici"
+    },
+    "Login": {
+    "login-title": "Se connecter",
+    "login-description":"Connectez-vous avec votre compte ou continuez en tant qu'invité pour accéder à vos identifiants.",
+    "login-note":"Certaines fonctionnalités peuvent être limitées en mode invité.",
+    "logging-in": "Connexion en cours",
+    "login-google": "Continuer avec Google",
+    "login-guest": "Continuer en tant qu'invité"
+    },
+    "LoginFailedModal": {
+      "failure-message": "Échec de la connexion",
+      "failure-description": "Votre tentative de connexion a échoué. Veuillez vérifier vos identifiants et réessayer",
+      "retry": "Réessayer"
+    }
+  },
+  "PinPage": {
+    "submit": "Soumettre",
+    "submitting": "Soumission en cours",
+    "set-passcode": "Définir le code d'accès",
+    "enter-passcode": "Entrer le code d'accès",
+    "confirm-passcode": "Confirmer le code d'accès",
+    "reset-passcode": "Réinitialiser le code d'accès",
+    "set-passcode-description": "Définissez votre code d'accès pour commencer",
+    "enter-passcode-description": "Entrez votre code d'accès à 6 chiffres",
+    "passcode-warning": "Assurez-vous de vous souvenir du mot de passe pour une future connexion",
+    "error": {
+      "wallet-not-found-error": "Aucun portefeuille trouvé. Veuillez en créer un.",
+      "pin-length-error": "Le code PIN doit comporter 6 chiffres.",
+      "passcode-mismatch-error": "Les codes PIN ne correspondent pas.",
+      "create-wallet-error": "Échec de la création du portefeuille.",
+      "incorrect-pin-error": "Code PIN incorrect.",
+      "fetch-wallets-error": "Échec du chargement des portefeuilles."
     }
   },
   "IssuersPage": {
