[INJIWEB-1513] adjust the styles of elements in the home and stored credentials screen to make them responsive and adapt to the different screen sizes and also add the translations for the different texts in both screens
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -302,5 +302,20 @@
     "metrics": "مرات",
     "success": "يتابع",
     "cancel": "يلغي"
+  },
+  "Dashboard": {
+    "Home": {
+      "title": "بيت",
+      "welcome": "مرحباً"
+    },
+    "StoredCredentials": {
+      "title": "بيانات الاعتماد المخزنة",
+      "header": {
+        "addCredential": "إضافة بيانات الاعتماد"
+      },
+      "emptyScreen": {
+        "title": "لم يتم تخزين أي بيانات اعتماد!"
+      }
+    }
   }
 }
