--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -302,5 +302,20 @@
     "metrics": "நேரங்கள்",
     "success": "தொடரவும்",
     "cancel": "ரத்து செய்"
+  },
+  "Dashboard": {
+    "Home": {
+      "title": "வீடு",
+      "welcome": "வரவேற்கிறோம்"
+    },
+    "StoredCredentials": {
+      "title": "சேமிக்கப்பட்ட சான்றுகள்",
+      "header": {
+        "addCredential": "நற்சான்றிதழ் சேர்க்கவும்"
+      },
+      "emptyScreen": {
+        "title": "எந்தச் சான்றுகளும் சேமிக்கப்படவில்லை!"
+      }
+    }
   }
 }
