[INJIWEB-1513] change the Help to Faq in all places except java and ui test files and add missing translations for headers in all locale files and update test cases for the same
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -2,7 +2,9 @@
   "PageTemplate": {
     "Header": {
       "home": "الصفحة الرئيسية",
-      "help": "مساعدة"
+      "faq": "التعليمات",
+      "login": "تسجيل الدخول",
+      "logout": "تسجيل الخروج"
     },
     "Footer": {
       "product": "منتج MOSIP",
@@ -158,14 +160,14 @@
     "heading": "هذا خطأ",
     "subHeading": "عنوان URL المطلوب {{pathname}} لم يتم العثور على هذا الخادم."
   },
-  "HelpPage": {
-    "title": "يساعد"
+  "FAQPage": {
+    "title": "التعليمات"
   },
-   "HelpDropdown":{
-    "heading":"يساعد",
-    "item1":"الأسئلة الشائعة"
+  "FAQDropdown": {
+    "heading": "التعليمات",
+    "item1": "الأسئلة الشائعة"
   },
-  "Help": {
+  "FAQ": {
     "item1": {
       "title": "من هم المصدرون؟",
       "description1": "الجهات المصدرة هي إما هيئات حكومية أو كيانات تثق بها الحكومة، وتكون مسؤولة عن تقديم بيانات اعتماد يمكن التحقق منها بتنسيق PDF للمقيمين عند الطلب."
