--- a/inji-web/src/locales/fr.json
+++ b/inji-web/src/locales/fr.json
@@ -2,7 +2,9 @@
   "PageTemplate": {
     "Header": {
       "home": "Accueil",
-      "help": "Aide"
+      "faq": "FAQ",
+      "login": "Se connecter",
+      "logout": "Déconnexion"
     },
     "Footer": {
       "product": "Un produit MOSIP",
@@ -158,14 +160,14 @@
     "heading": "C'est une erreur",
     "subHeading": "L'URL demandée {{pathname}} n'a pas été trouvé sur ce serveur."
   },
-  "HelpPage": {
-    "title": "Aide"
+  "FAQPage": {
+    "title": "Questions fréquemment posées"
   },
-  "HelpDropdown":{
-    "heading":"Aide",
-    "item1":"Questions fréquemment posées"
+  "FAQDropdown": {
+    "heading": "Questions fréquemment posées",
+    "item1": "Questions fréquemment posées"
   },
-  "Help": {
+  "FAQ": {
     "item1": {
       "title": "Qui sont les émetteurs ?",
       "description1": "Les émetteurs sont soit des organismes gouvernementaux, soit des entités de confiance du gouvernement, chargés de fournir des informations d'identification vérifiables au format PDF aux résidents sur demande."
