--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -2,7 +2,9 @@
   "PageTemplate": {
     "Header": {
       "home": "घर",
-      "help": "मदद"
+      "faq": "अक्सर पूछे जाने वाले प्रश्न",
+      "login": "लॉग इन करें",
+      "logout": "लॉग आउट"
     },
     "Footer": {
       "product": "एक MOSIP उत्पाद",
@@ -158,14 +160,14 @@
     "heading": "यह एक त्रुटि है",
     "subHeading": "अनुरोधित यूआरएल {{pathname}} इस सर्वर पर नहीं मिला था।"
   },
-  "HelpPage": {
-    "title": "मदद"
+  "FAQPage": {
+    "title": "अक्सर पूछे जाने वाले प्रश्न"
   },
-  "HelpDropdown":{
-    "heading":"मदद",
-    "item1":"अक्सर पूछे जाने वाले प्रश्नों"
+  "FAQDropdown": {
+    "heading": "अक्सर पूछे जाने वाले प्रश्न",
+    "item1": "पूछे जाने वाले प्रश्न"
   },
-  "Help": {
+  "FAQ": {
     "item1": {
       "title": "जारीकर्ता कौन हैं?",
       "description1": "जारीकर्ता या तो सरकारी निकाय या सरकार द्वारा विश्वसनीय संस्थाएं हैं, जो अनुरोध पर निवासियों को पीडीएफ प्रारूप में सत्यापन योग्य क्रेडेंशियल प्रदान करने के लिए जिम्मेदार हैं।"
