--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -2,7 +2,9 @@
   "PageTemplate": {
     "Header": {
       "home": "ಮುಖಪುಟ",
-      "help": "ಸಹಾಯ"
+      "faq": "FAQ",
+      "login": "ಲಾಗಿನ್ ಮಾಡಿ",
+      "logout": "ಲಾಗ್ಔಟ್"
     },
     "Footer": {
       "product": "ಒಂದು MOSIP ಉತ್ಪನ್ನ",
@@ -158,14 +160,14 @@
     "heading": "ಅದು ದೋಷ",
     "subHeading": "ವಿನಂತಿಸಿದ URL {{pathname}} ಈ ಸರ್ವರ್‌ನಲ್ಲಿ ಕಂಡುಬಂದಿಲ್ಲ."
   },
-  "HelpPage": {
-    "title": "ಸಹಾಯ"
+  "FAQPage": {
+    "title": "FAQ"
   },
-  "HelpDropdown":{
-    "heading":"ಸಹಾಯ",
-    "item1":"ಪದೇ ಪದೇ ಕೇಳಲಾಗುವ ಪ್ರಶ್ನೆಗಳು"
+  "FAQDropdown": {
+    "heading": "FAQ",
+    "item1": "FAQ ಗಳು"
   },
-  "Help": {
+  "FAQ": {
     "item1": {
       "title": "ವಿತರಕರು ಯಾರು?",
       "description1": "ವಿತರಕರು ಸರ್ಕಾರಿ ಸಂಸ್ಥೆಗಳು ಅಥವಾ ಸರ್ಕಾರದಿಂದ ವಿಶ್ವಾಸಾರ್ಹವಾಗಿರುವ ಘಟಕಗಳು, ವಿನಂತಿಯ ಮೇರೆಗೆ ನಿವಾಸಿಗಳಿಗೆ PDF ಸ್ವರೂಪದಲ್ಲಿ ಪರಿಶೀಲಿಸಬಹುದಾದ ರುಜುವಾತುಗಳನ್ನು ಒದಗಿಸುವ ಜವಾಬ್ದಾರಿಯನ್ನು ಹೊಂದಿರುತ್ತಾರೆ."
