--- a/inji-web/src/locales/pt.json
+++ b/inji-web/src/locales/pt.json
@@ -2,7 +2,9 @@
   "PageTemplate": {
     "Header": {
       "home": "Página inicial",
-      "help": "Ajuda"
+      "faq": "Perguntas frequentes",
+      "login": "Conecte-se",
+      "logout": "வெளியேறு"
     },
     "Footer": {
       "product": "Um produto MOSIP",
@@ -150,14 +152,14 @@
     "heading": "Isso é um erro",
     "subHeading": "A URL solicitada {{pathname}} não foi encontrada neste servidor."
   },
-  "HelpPage": {
-    "title": "Ajuda"
+  "FAQPage": {
+    "title": "Perguntas frequentes"
   },
-  "HelpDropdown":{
-    "heading":"Ajuda",
-    "item1":"Perguntas frequentes"
+  "FAQDropdown": {
+    "heading": "Perguntas frequentes",
+    "item1": "Perguntas frequentes"
   },
-  "Help": {
+  "FAQ": {
     "item1": {
       "title": "Quem são os emissores?",
       "description1": "Os emissores são órgãos governamentais ou entidades confiáveis ​​pelo governo, responsáveis ​​por fornecer credenciais verificáveis ​​em formato PDF aos residentes mediante solicitação."
