--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -2,7 +2,9 @@
   "PageTemplate": {
     "Header": {
       "home": "முகப்பு",
-      "help": "உதவி"
+      "faq": "அடிக்கடி கேட்கப்படும் கேள்விகள்",
+      "login": "உள்நுழைக",
+      "logout": "வெளியேறு"
     },
     "Footer": {
       "product": "ஒரு MOSIP தயாரிப்பு",
@@ -158,14 +160,14 @@
     "heading": "அது பிழை",
     "subHeading": "கோரப்பட்ட URL {{pathname}} இந்த சர்வரில் காணப்படவில்லை."
   },
-  "HelpPage": {
-    "title": "உதவி"
+  "FAQPage": {
+    "title": "அடிக்கடி கேட்கப்படும் கேள்விகள்"
   },
-  "HelpDropdown":{
-    "heading":"உதவி",
-    "item1":"அடிக்கடி கேட்கப்படும் கேள்விகள்"
+  "FAQDropdown": {
+    "heading": "அடிக்கடி கேட்கப்படும் கேள்விகள்",
+    "item1": "அடிக்கடி கேட்கப்படும் கேள்விகள்"
   },
-  "Help": {
+  "FAQ": {
     "item1": {
       "title": "வழங்குபவர்கள் யார்?",
       "description1": "வழங்குபவர்கள் அரசாங்க அமைப்புகள் அல்லது அரசாங்கத்தால் நம்பப்படும் நிறுவனங்கள், கோரிக்கையின் பேரில் குடியிருப்பாளர்களுக்கு PDF வடிவத்தில் சரிபார்க்கக்கூடிய நற்சான்றிதழ்களை வழங்குவதற்குப் பொறுப்பாகும்."
